# Sistemas-Operativos

./: CMakeLists.txt  README.md  compilar.bat
data/: numeros.txt  prueba1.txt
src/: main.cpp
src/app/: Application.cpp  Application.hpp
src/filosofos/: Filosfo.hpp  Filosofo.cpp  FilosofosController.cpp  FilosofosController.hpp  Mesa.cpp  Mesa.hpp  Tenedor.cpp  Tenedor.hpp
src/pc/: Buffer.cpp  Buffer.hpp  Consumidor.cpp  Consumidor.hpp  PCController.cpp  PCController.hpp  Productor.cpp  Productor.hpp
src/scenes/: FilosofosScene.cpp  FilosofosScene.hpp  MenuScene.cpp  MenuScene.hpp  PCScene.cpp  PCScene.hpp  Scene.hpp
